--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pyyaml==5.1
 torch #==1.8.0
 torchvision #==0.9.0
-git+https://github.com/facebookresearch/detectron2.git #detectron2
+--extra-index-url https://dl.fbaipublicfiles.com/detectron2/wheels/cu113/torch1.10/index.html
+detectron2
 opencv-contrib-python-headless
