--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ torch #==1.8.0
 torchvision #==0.9.0
 # git+https://github.com/facebookresearch/detectron2.git #detectron2
 opencv-contrib-python==4.5.5.62
-fvcore
-cloudpickle
-omegaconf
+#fvcore
+#cloudpickle
+#omegaconf
 
-Cython
+#Cython
 #git+https://github.com/waleedka/coco.git#egg=pycocotools&subdirectory=PythonAPI
 
 git+https://github.com/facebookresearch/detectron2.git #detectron2
