--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ opencv-contrib-python==4.5.5.62
 #Cython
 #git+https://github.com/waleedka/coco.git#egg=pycocotools&subdirectory=PythonAPI
 
-git+https://github.com/facebookresearch/detectron2.git #detectron2
+# git+https://github.com/facebookresearch/detectron2.git #detectron2
 
 
 
