--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pyyaml==5.1
 torch #==1.8.0
 torchvision #==0.9.0
 streamlit
-git+https://github.com/facebookresearch/detectron2.git #detectron2
+#git+https://github.com/facebookresearch/detectron2.git #detectron2
 
 opencv-contrib-python==4.5.5.62
 
@@ -14,8 +14,6 @@ opencv-contrib-python==4.5.5.62
 #git+https://github.com/waleedka/coco.git#egg=pycocotools&subdirectory=PythonAPI
 
 # git+https://github.com/facebookresearch/detectron2.git #detectron2
-
-
 
 #=======
 #--extra-index-url https://dl.fbaipublicfiles.com/detectron2/wheels/cu113/torch1.10/index.html
