--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,8 @@ torchvision #==0.9.0
 streamlit
 git+https://github.com/facebookresearch/detectron2.git #detectron2
 
-opencv-contrib-python==4.5.5.62
-
-apt-get update
-apt-get install ffmpeg libsm6 libxext6  -y
-
+#opencv-contrib-python==4.5.5.62
+opencv-contrib-python-headless
 #fvcore
 #cloudpickle
 #omegaconf
