--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 pyyaml==5.1
-#torch #==1.8.0
-#torchvision #==0.9.0
+torch #==1.8.0
+torchvision #==0.9.0
 streamlit
-git+https://github.com/facebookresearch/detectron2.git #detectron2
+#git+https://github.com/facebookresearch/detectron2.git #detectron2
 
 #opencv-contrib-python==4.5.5.62
 opencv-contrib-python-headless
