--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@ pyyaml==5.1
 torch #==1.8.0
 torchvision #==0.9.0
 streamlit
-git+https://github.com/facebookresearch/detectron2.git #detectron2
+#git+https://github.com/facebookresearch/detectron2.git #detectron2
+
+-f https://dl.fbaipublicfiles.com/detectron2/wheels/cu111/torch1.8/index.html 
+detectron2
+
 opencv-contrib-python-headless
 
 
