--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 pyyaml==5.1
-torch==2.1.0
-torchvision==0.12.0
+torch==2.0.1
+torchvision==0.15.2
 streamlit
 opencv-contrib-python-headless
 
--f https://dl.fbaipublicfiles.com/detectron2/wheels/cu118/torch2.1/index.html
-detectron2==0.6  # Specify a version compatible with torch 2.1.0
+-f https://dl.fbaipublicfiles.com/detectron2/wheels/cu118/torch2.0/index.html
+detectron2==0.6
