--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 pyyaml==5.1
-torch==2.0.1
-torchvision==0.15.2
+# torch==2.0.1
+# torchvision==0.15.2
 streamlit
 opencv-contrib-python-headless
 
 # -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu118/torch2.0/index.html
-detectron2==0.2.1+cpu
-# detectron2==0.6
+# detectron2==0.2.1+cpu
+ detectron2==0.6
+
+torch==1.8.0
+torchvision==0.9.0
+git+https://github.com/facebookresearch/detectron2.git #detectron2
