--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ torchvision==0.10.0
 streamlit
 
 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.9/index.html
-detectron2
+detectron2==0.4
 
 opencv-contrib-python-headless
