--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ torch==1.9.0
 torchvision==0.10.0
 streamlit
 
--f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.9/index.html
-detectron2==0.4
+python -m pip install detectron2 -f \
+  https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.9/index.html
 
 opencv-contrib-python-headless
