--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.10/index.html
+#-f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.10/index.html
 pyyaml==5.1
 torch==1.10.0
 torchvision==0.11.0
@@ -6,4 +6,4 @@ streamlit
 
 opencv-contrib-python-headless
 
-detectron2
+#detectron2
