--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 #-f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.10/index.html
-pyyaml==5.1
+#pyyaml==5.1
 torch==1.10.0
-torchvision==0.11.0
-streamlit
+#torchvision==0.11.0
+#streamlit
 
-opencv-contrib-python-headless
+#opencv-contrib-python-headless
 
 #detectron2
